[package]
name = "root-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
petgraph = "0.6.4"
itertools = "0.12.1"
#console_engine = "2.6.1"
console = "0.15.8"
tungstenite = "0.21.0"